# wasm-chisel

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
chisel/: Cargo.toml
chisel/src/: cmd_oneliner.rs  cmd_run.rs  config.rs  driver.rs  logger.rs  main.rs  options.rs  result.rs
libchisel/: Cargo.toml
libchisel/src/: binaryenopt.rs  checkfloat.rs  checkfuncexport.rs  checkmemexport.rs  checkstartfunc.rs  depgraph.rs  deployer.rs  dropsection.rs  fromwat.rs  gc.rs  imports.rs  instructionerrors.rs  lib.rs  moduledelegate.rs  moduleserver.rs  remapexports.rs  remapimports.rs  remapstart.rs  repack.rs  snip.rs  trimexports.rs  trimstartfunc.rs  utils.rs  verifyexports.rs  verifyimports.rs  verifyinstructions.rs
wasm-cleanup/: Cargo.toml  README.md
wasm-cleanup/src/: lib.rs
wasm-deployer/: Cargo.toml
wasm-deployer/src/: main.rs
