[package]
name = "chisel"
description = "Some useful utilities to transform WebAssembly binaries, most importantly for WebAssembly used in a deterministic / blockchain context"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/wasmx/wasm-chisel"
homepage = "https://github.com/wasmx/wasm-chisel"

[dependencies]
libchisel = { path = "../libchisel" }
parity-wasm = { git = "https://github.com/axic/parity-wasm", branch = "custom-section" }
