[package]
name = "chisel"
description = "Some useful utilities to transform WebAssembly binaries, most importantly for WebAssembly used in a deterministic / blockchain context"
version = "0.2.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>", "Jake Lang <jak3lang@gmail.com"]
license = "Apache-2.0"
repository = "https://github.com/wasmx/wasm-chisel"
homepage = "https://github.com/wasmx/wasm-chisel"
categories = ["webassembly", "development tools"]
keywords = ["webassembly", "wasm", "blockchain", "ethereum"]
edition = "2018"

[dependencies]
libchisel = { path = "../libchisel", version = "0.2.0" }
parity-wasm = "^0.35.6"
clap = "2.32.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_yaml = "0.8.7"
