[package]
name = "libchisel"
description = "Some useful utilities to transform WebAssembly binaries, most importantly for WebAssembly used in a deterministic / blockchain context"
version = "0.6.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>", "Jake Lang <jak3lang@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/wasmx/wasm-chisel"
homepage = "https://github.com/wasmx/wasm-chisel"
categories = ["webassembly", "development tools"]
keywords = ["webassembly", "wasm", "blockchain", "ethereum"]
edition = "2018"

[dependencies]
binaryen = { version = "0.9", optional = true }
parity-wasm = "^0.41.0"
failure = "0.1.6"
walrus = "0.12.0"
wasm-snip = "0.4.0"

[features]
default = []

[dev-dependencies]
rustc-hex = "1.0"
