[package]
name = "wasm-cleanup"
version = "0.0.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
repository = "https://github.com/ewasm/wasm-cleanup"
homepage = "https://github.com/ewasm/wawsm-cleanup"
license = "Apache-2.0"
readme = "README.md"
description = "Rename imports in wasm modules."
keywords = ["ewasm"]
publish = false

[dependencies]
parity-wasm = "0.21"
log = "0.3"
rustc-demangle = "0.1.5"
