[package]
name = "wasm-deployer"
version = "0.0.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
repository = "https://github.com/ewasm/wasm-deployer"
homepage = "https://github.com/ewasm/wasm-deployer"
license = "Apache-2.0"
readme = "README.md"
description = "Validator and metering injector for eWASM."
keywords = ["ewasm"]
publish = false

[dependencies]
parity-wasm = { git = "https://github.com/axic/parity-wasm", branch = "custom-section" }
log = "0.3"
rustc-demangle = "0.1.5"
byteorder = "1.2.4"
rustc-hex = "1.0"
